--- a/index.html
+++ b/index.html
@@ -1,228 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil</title>
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
+    <title>Ada Lovelace - Redirection</title>
+    <meta http-equiv="refresh" content="0; url=fr/index.html">
+    <script>
+        window.location.href = "fr/index.html";
+    </script>
 </head>
 
 <body>
-    <header>
-        <section class="header_logo">
-            <div class="header_logo-block">
-                <img class="header_logo-image" src="/assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
-                <div class="header_logo-composant"></div>
-                <div class="header_logo-ada">
-                    <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
-                </div>
-            </div>
-        </section>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
-        </div>
-    </header>
-
-    <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
-            <span class="menu__bar"></span>
-            <span class="menu__bar"></span>
-            <span class="menu__bar"></span>
-        </button>
-
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
-            <ul class="menu__list" role="menu">
-                <li>
-                    <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
-                        <span>Ada Lovelace</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
-                        <span>The Imitation Game</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
-                    </a>
-                </li>
-            </ul>
-
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
-            </div>
-        </div>
-    </nav>
-
-    <main>
-        <h1 class="visually-hidden">Page d'accueil de Ada Lovelace</h1>
-        <section class="hero">
-            <div class="hero__accueil">
-                <img src="/assets/img/hero_page_accueil.avif" alt="Hero de la page d'accueil">
-            </div>
-        </section>
-        <section class="citation">
-            <blockquote>
-                <p>« Ce cerveau qui est le mien est quelque chose de plus que simplement mortel, comme le temps le
-                    montrera. »</p>
-            </blockquote>
-        </section>
-        <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
-        <section class="Texte__principal-accueil">
-            <div class="navyblue__block">
-                <p>Les femmes ont toujours joué un rôle crucial dans la science, pourtant leur
-                    contribution a fréquemment été minimisée, oubliée ou attribuée à tort à des collègues masculins.
-                    Cette
-                    injustice historique, encore perceptible aujourd’hui, alimente une sous-représentation persistante
-                    des
-                    femmes dans la recherche et dans la médiatisation de leurs découvertes.
-                <p>Parmi ces figures oubliées, Ada Lovelace se distingue comme une pionnière majeure. Née en 1815, elle
-                    est
-                    la fille du célèbre poète Lord Byron et d’une mère passionnée de mathématiques, qui lui transmet un
-                    goût
-                    précoce pour les sciences. Ada Lovelace se forme auprès de grands mathématiciens de son temps, dont
-                    Charles Babbage, inventeur de la machine analytique, un ancêtre de l’ordinateur moderne.</p>
-            </div>
-        </section>
-        <section class="youtube_video">
-            <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
-                <source src="/assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
-                    type="video/mp4">
-                Votre navigateur ne supporte pas la lecture de vidéos.
-            </video>
-        </section>
-
-        <section class="section__title">
-            <h2>Articles :</h2>
-        </section>
-        <section class="carousel">
-            <div class="carousel__container">
-                <a href="adalovelace.html" aria-label="Lire l'article sur Ada Lovelace">
-                    <article class="card" role="article" aria-labelledby="card-title-1">
-                        <img src="/assets/img/card1.avif" alt="Illustration pour l'article Ada Lovelace" loading="lazy">
-                        <div class="card__content">
-                            <h3 class="card__title" id="card-title-1">Ada Lovelace</h3>
-                            <p class="card__text">Découvrez la vie et les contributions d'Ada Lovelace, pionnière de
-                                l'informatique.</p>
-                        </div>
-                    </article>
-                </a>
-
-                <a href="effetmatilda.html" aria-label="Lire l'article sur l'effet Matilda">
-                    <article class="card" role="article" aria-labelledby="card-title-2">
-                        <img src="/assets/img/card2.avif" alt="Illustration pour l'article sur l'effet Matilda"
-                            loading="lazy">
-                        <div class="card__content">
-                            <h3 class="card__title" id="card-title-2">L'Effet Matilda</h3>
-                            <p class="card__text">Découvrez les implications de l'effet Matilda, un biais historique qui
-                                a minimisé les contributions des femmes scientifiques.</p>
-                        </div>
-                    </article>
-                </a>
-
-                <a href="scienceada.html" aria-label="Lire l'article sur la science d'Ada Lovelace">
-                    <article class="card" role="article" aria-labelledby="card-title-3">
-                        <img src="/assets/img/card3.avif" alt="Illustration pour l'article sur la science d'Ada"
-                            loading="lazy">
-                        <div class="card__content">
-                            <h3 class="card__title" id="card-title-3">La science d'Ada</h3>
-                            <p class="card__text">Découvrez les inventions d'Ada Lovelace et son impact sur
-                                l'informatique moderne.</p>
-                        </div>
-                    </article>
-                </a>
-
-                <a href="theimitationgame.html" aria-label="Lire l'article sur The Imitation Game">
-                    <article class="card" role="article" aria-labelledby="card-title-4">
-                        <img src="/assets/img/card4.avif" alt="Illustration pour l'article sur The Imitation Game"
-                            loading="lazy">
-                        <div class="card__content">
-                            <h3 class="card__title" id="card-title-4">The Imitation Game</h3>
-                            <p class="card__text">Découvrez le film "The Imitation Game", qui raconte l'histoire d'Alan
-                                Turing et de la machine de décryptage pendant la Seconde Guerre mondiale.</p>
-                        </div>
-                    </article>
-                </a>
-
-                <a href="litterature.html" aria-label="Lire l'article sur Ada dans la littérature">
-                    <article class="card" role="article" aria-labelledby="card-title-5">
-                        <img src="/assets/img/card5.avif" alt="Illustration pour l'article sur Ada dans la littérature"
-                            loading="lazy">
-                        <div class="card__content">
-                            <h3 class="card__title" id="card-title-5">Ada dans la littérature</h3>
-                            <p class="card__text">L'histoire d'Ada Lovelace a inspiré de nombreux ouvrages littéraires
-                                et biographies.</p>
-                        </div>
-                    </article>
-                </a>
-            </div>
-        </section>
-    </main>
-    <footer class="footer" role="contentinfo">
-        <div class="footer__left">
-            <div class="footer__logo">
-                <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
-            </div>
-            <div class="footer__leftelement">
-                <p>CONTACT</p>
-                <div class="footer__leftelement-text">
-                    <p>Virgile Esnaux <br> MMi1 B2 <br> virgile.esnaux@edu.univ-fcomte.fr</p>
-                </div>
-            </div>
-            <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
-                <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
-                        Montbéliard“</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
-            <div class="footer__division"></div>
-            <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="/assets/img/MMI_logo.svg" alt="Logo MMi">
-            </a>
-        </div>
-    </footer>
-    <script src="src/js/script.js"></script>
+    <p>Redirection vers <a href="fr/index.html">la page d'accueil</a>...</p>
 </body>
 
 </html>
