--- a/fr/a-propos.html
+++ b/fr/a-propos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Propos</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
 </head>
@@ -14,10 +14,10 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="/assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
                 </div>
             </div>
         </section>
@@ -39,37 +39,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
                         <span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
+                        style="background-image: url('../assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
+                        style="background-image: url('../assets/img/card2.avif')">
                         <span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
+                        style="background-image: url('../assets/img/card3.avif')">
                         <span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
+                        style="background-image: url('../assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
+                        style="background-image: url('../assets/img/card5.avif')">
                         <span>Ada dans la littérature</span>
                     </a>
                 </li>
@@ -90,7 +90,7 @@
     <main>
         <section class="hero">
             <div class="hero__effet">
-                <img src="/assets/img/hero_page_Apropos.avif" alt="Hero de la page à propos">
+                <img src="../assets/img/hero_page_Apropos.avif" alt="Hero de la page à propos">
             </div>
         </section>
         <section class="text-blue">
@@ -115,7 +115,7 @@
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -140,11 +140,11 @@
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
                 class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="/assets/img/MMI_logo.svg" alt="Logo MMi">
+                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
     </footer>
-    <script src="src/js/script.js"></script>
+    <script src="../src/js/script.js"></script>
 </body>
 
 </html>
