--- a/fr/effetmatilda.html
+++ b/fr/effetmatilda.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Effet Matilda</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
 </head>
@@ -14,10 +14,10 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="/assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
                 </div>
             </div>
         </section>
@@ -39,37 +39,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
                         <span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
+                        style="background-image: url('../assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
+                        style="background-image: url('../assets/img/card2.avif')">
                         <span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
+                        style="background-image: url('../assets/img/card3.avif')">
                         <span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
+                        style="background-image: url('../assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
+                        style="background-image: url('../assets/img/card5.avif')">
                         <span>Ada dans la littérature</span>
                     </a>
                 </li>
@@ -90,7 +90,7 @@
     <main>
         <section class="hero">
             <div class="hero__effet">
-                <img src="/assets/img/hero_page_Effet.avif" alt="Hero de la page de l'effet Matilda">
+                <img src="../assets/img/hero_page_Effet.avif" alt="Hero de la page de l'effet Matilda">
             </div>
         </section>
         <section class="section__title">
@@ -108,7 +108,7 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="/assets/img/Image1_page_Effet.avif" alt="Image représentant l'effet Matilda" loading="lazy">
+            <img src="../assets/img/Image1_page_Effet.avif" alt="Image représentant l'effet Matilda" loading="lazy">
         </section>
         <section class="citation">
             <blockquote>
@@ -133,7 +133,7 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Ada_Lovelace" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Ada Lovelace sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/Image1_page_Ada.avif" alt="Ada Lovelace" loading="lazy">
+                            <img src="../assets/img/Image1_page_Ada.avif" alt="Ada Lovelace" loading="lazy">
                         </a>
                         <span class="timeline__date">1815</span>
                         <h3 class="timeline__title">Ada Lovelace</h3>
@@ -146,7 +146,7 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Nettie_Stevens" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Nettie Stevens sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/nettie_stevens1.avif" alt="Nettie Stevens" loading="lazy">
+                            <img src="../assets/img/nettie_stevens1.avif" alt="Nettie Stevens" loading="lazy">
                         </a>
                         <span class="timeline__date">1861</span>
                         <h3 class="timeline__title">Nettie Stevens</h3>
@@ -159,7 +159,7 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Alice_Ball" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Alice Ball sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/alice_augusta_ball1.avif" alt="Alice Ball" loading="lazy">
+                            <img src="../assets/img/alice_augusta_ball1.avif" alt="Alice Ball" loading="lazy">
                         </a>
                         <span class="timeline__date">1892</span>
                         <h3 class="timeline__title">Alice Ball</h3>
@@ -172,7 +172,7 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Dorothy_Hodgkin" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Dorothy Hodgkin sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin" loading="lazy">
+                            <img src="../assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin" loading="lazy">
                         </a>
                         <span class="timeline__date">1906</span>
                         <h3 class="timeline__title">Dorothy Hodgkin</h3>
@@ -186,7 +186,7 @@
                         <a href="https://fr.wikipedia.org/wiki/Rosalind_Franklin" target="_blank"
                             class="timeline__image"
                             aria-label="En savoir plus sur Rosalind Franklin sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/rosalind_franklin1.avif" alt="Rosalind Franklin" loading="lazy">
+                            <img src="../assets/img/rosalind_franklin1.avif" alt="Rosalind Franklin" loading="lazy">
                         </a>
                         <span class="timeline__date">1910</span>
                         <h3 class="timeline__title">Rosalind Franklin</h3>
@@ -199,7 +199,7 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Jocelyn_Bell" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Jocelyn Bell Burnell sur Wikipedia (nouvelle fenêtre)">
-                            <img src="/assets/img/jocelyn_bell.avif" alt="Jocelyn Bell Burnell" loading="lazy">
+                            <img src="../assets/img/jocelyn_bell.avif" alt="Jocelyn Bell Burnell" loading="lazy">
                         </a>
                         <span class="timeline__date">1943</span>
                         <h3 class="timeline__title">Jocelyn Bell Burnell</h3>
@@ -213,7 +213,7 @@
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -238,11 +238,11 @@
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
                 class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="/assets/img/MMI_logo.svg" alt="Logo MMi">
+                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
     </footer>
-    <script src="src/js/script.js"></script>
+    <script src="../src/js/script.js"></script>
 </body>
 
 </html>
