--- a/fr/scienceada.html
+++ b/fr/scienceada.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ada Lovelace</title>
-    <link rel="stylesheet" href="src/css/style.css">
+    <title>Science d'Ada</title>
+    <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
 </head>
@@ -14,14 +14,14 @@
     <header>
         <section class="header_logo">
             <div class="header_logo-block">
-                <img class="header_logo-image" src="/assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
+                <img class="header_logo-image" src="../assets/img/Logo_header.avif" alt="Image de Ada Lovelace">
                 <div class="header_logo-composant"></div>
                 <div class="header_logo-ada">
-                    <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                    <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
                 </div>
             </div>
         </section>
-        <h1 class="header__title">Ada <br> Lovelace</h1>
+        <h1 class="header__title">La Science <br> d'Ada</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
             <a href="/en/" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
@@ -39,37 +39,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
                         <span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('/assets/img/card1.avif')">
+                        style="background-image: url('../assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('/assets/img/card2.avif')">
+                        style="background-image: url('../assets/img/card2.avif')">
                         <span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('/assets/img/card3.avif')">
+                        style="background-image: url('../assets/img/card3.avif')">
                         <span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('/assets/img/card4.avif')">
+                        style="background-image: url('../assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('/assets/img/card5.avif')">
+                        style="background-image: url('../assets/img/card5.avif')">
                         <span>Ada dans la littérature</span>
                     </a>
                 </li>
@@ -89,80 +89,67 @@
 
     <main>
         <section class="hero">
-            <div class="hero__ada">
-                <img src="/assets/img/hero_page_Ada.avif" alt="Hero de la page d'Ada Lovelace">
+            <div class="hero__science">
+                <img src="../assets/img/hero_page_Science.avif" alt="Hero de la page de la science d'Ada Lovelace">
             </div>
         </section>
         <section class="section__title">
-            <h2>Qui est Ada Lovelace ?</h2>
+            <h2>Qu’a t’elle crée?</h2>
         </section>
-        <section class="info-block">
-            <h3 class="info-block__title">Informations sur cette personne</h3>
-            <div class="info-block__wrapper">
-                <div class="info-block__image">
-                    <img src="/assets/img/Image1_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
-                    <img src="/assets/img/signature.svg" alt="Signature d'Ada Lovelace" loading="lazy">
-                </div>
-                <div class="info-block__content">
-                    <p><strong>Nom:</strong> Ada Lovelace</p>
-                    <p><strong>Nom complet:</strong> Augusta Ada King, comtesse de Lovelace</p>
-                    <p><strong>Née:</strong> 10 décembre 1815, Londres</p>
-                    <p><strong>Mort:</strong> 27 novembre 1852, Londres</p>
-                    <p><strong>Nationalité:</strong> Britannique</p>
-                    <p><strong>Profession:</strong> Mathématicienne, pionnière de l'informatique</p>
-                </div>
+        <section class="Texte__principal-science">
+            <div class="navyblue__block">
+                <div class="textmono-title">Son innovation</div>
+                <p>Ada Lovelace a créé le tout premier programme informatique en 1843, conçu pour être exécuté sur la
+                    machine analytique de Charles Babbage.
+                    Concrètement, elle a rédigé un algorithme permettant à la machine de calculer les nombres de
+                    Bernoulli, posant ainsi les bases de la programmation moderne. Dans ses fameuses Notes, elle a aussi
+                    anticipé le potentiel des machines à traiter non seulement des nombres, mais aussi des symboles, de
+                    la musique ou des images, démontrant une vision révolutionnaire de l’informatique.</p>
             </div>
         </section>
-        <section class="info-block__purple">
-            <h3 class="info-block__title">La naissance de Ada Lovelace</h3>
-            <div class="info-block__wrapper">
-                <div class="info-block__image--purple">
-                    <img src="/assets/img/Image2_page_Ada.avif" alt="Histoire d'Ada Lovelace" loading="lazy">
-                </div>
-                <div class="info-block__content">
-                    <p>Fille du célèbre poète Lord Byron et de Lady Annabella Milbanke, fervente passionnée de
-                        mathématiques, Ada reçoit une éducation scientifique rare pour une femme de son époque, sa mère
-                        souhaitant l’éloigner du tempérament romantique de son père.</p>
-                </div>
-            </div>
+        <section class="image__representation">
+            <img src="../assets/img/Image1_page_Science.avif" alt="Image de la machine analytique" loading="lazy">
         </section>
-        <section class="info-leftblock__purple">
-            <h3 class="info-leftblock__title">La naissance de Ada Lovelace</h3>
-            <div class="info-leftblock__wrapper">
-                <div class="info-leftblock__image--purple">
-                    <img src="/assets/img/Image3_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
-                </div>
-                <div class="info-leftblock__content">
-                    <p>Dès son adolescence, Ada démontre un grand talent pour les mathématiques. En 1832, elle
-                        rencontre Mary Somerville, scientifique écossaise reconnue, qui devient son mentor. C’est par
-                        son intermédiaire qu’elle fait la connaissance de Charles Babbage, inventeur de la machine à
-                        différences puis de la machine analytique, considérée comme le premier modèle d’ordinateur.</p>
-                </div>
-            </div>
+        <section class="text__main">
+            <h2 class="textmono-title">Comment a-t-elle fait?
+                <h3 class="textmono-content">Chargée de traduire un article rédigé par le mathématicien italien Luigi
+                    Menabrea, Ada y ajoute de nombreuses notes personnelles, trois fois plus longues que le texte
+                    original. Dans la dernière de ces notes, appelée Note G, elle conçoit un algorithme détaillé
+                    permettant à la machine de calculer les nombres de Bernoulli, considéré aujourd’hui comme le premier
+                    programme informatique de l’histoire.</h3>
+            </h2>
+        </section>
+        <section class="image__representation">
+            <img src="../assets/img/Image2_page_Science.avif" alt="Image de la note G" loading="lazy">
         </section>
         <section class="citation">
             <blockquote>
-                <p>« Mon travail mathématique implique une imagination considérable. »</p>
+                <p>« L’imagination est la faculté de découverte, par excellence. C’est celle qui pénètre dans les mondes
+                    invisibles qui nous entourent, les mondes de la science. »»</p>
             </blockquote>
         </section>
         <h2 class="citation__personne">Citation d’Ada Lovelace</h2>
-        <section class="image__representation">
-            <img src="/assets/img/Image4_page_Ada.avif" alt="Image d'Ada Lovelace et Charles Babbage" loading="lazy">
+        <section class="info-box">
+            <h3 class="info-box__title">De plus,</h3>
+            <div class="info-box__content">
+                <p>Au-delà de ce programme, Ada Lovelace a envisagé de manière visionnaire que la machine pourrait
+                    manipuler non seulement des nombres, mais aussi des symboles, des lettres, et potentiellement
+                    produire de la musique ou des images, anticipant ainsi le concept moderne d’un ordinateur
+                    polyvalent.</p>
+            </div>
         </section>
         <section class="text__main">
-            <h2 class="textmono-title">Pourquoi est-elle connue?
-                <h3 class="textmono-content">Ada Lovelace, pionnière britannique des mathématiques et de l’informatique,
-                    est célèbre pour avoir réalisé le premier véritable programme informatique. Entre 1842 et 1843, elle
-                    travaille aux côtés de Charles Babbage sur son ambitieux projet de machine analytique, un dispositif
-                    mécanique capable d’exécuter des calculs complexes et de suivre des instructions enregistrées sur
-                    des cartes perforées, ancêtre des ordinateurs modernes</h3>
+            <h3 class="textmono-content">En plus de ses travaux informatiques, Ada s’est aussi intéressée à la théorie
+                des probabilités, utilisant ses compétences pour des applications pratiques comme les jeux de hasard.
+                Elle a également tenté de soutenir financièrement la construction de la machine analytique, malgré des
+                difficultés économiques.</h3>
             </h2>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="/assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -187,11 +174,11 @@
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
                 class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="/assets/img/MMI_logo.svg" alt="Logo MMi">
+                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
             </a>
         </div>
     </footer>
-    <script src="src/js/script.js"></script>
+    <script src="../src/js/script.js"></script>
 </body>
 
 </html>
