Page litterature anglais faite

--- a/en/litterature.html
+++ b/en/litterature.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Littérature</title>
+    <title>Litterature</title>
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -21,26 +21,26 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__minititle">Ada dans la <br> littérature</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
+        <h1 class="header__minititle">Ada in <br> Literature</h1>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -94,23 +92,23 @@
             </div>
         </section>
         <section class="section__title">
-            <h2>Pourquoi ce livre est-il en lien avec Ada et l’effet Matilda ?</h2>
+            <h2>Why is this book related to Ada and the Matilda effect?</h2>
         </section>
         <section class="Texte__principal-science">
             <div class="navyblue__block">
-                <div class="textmono-title">De quoi parle le livre?</div>
-                <p>Le livre "Une histoire de la science au féminin" de Jean C. Baudet présente Ada Lovelace comme la
-                    première programmeuse informatique. En 1843, elle traduit un article sur la machine analytique de
-                    Charles Babbage et y ajoute ses propres notes, créant le premier algorithme destiné à une machine.
-                    Son travail, pourtant révolutionnaire, est resté longtemps méconnu et attribué à des hommes.</p>
+                <div class="textmono-title">What is the book about?</div>
+                <p>The book "Une histoire de la science au féminin" by Jean C. Baudet presents Ada Lovelace as the first
+                    computer programmer. In 1843, she translated an article about Charles Babbage's analytical engine
+                    and added her own notes, creating the first algorithm intended for a machine. Her work, although
+                    revolutionary, remained largely unknown and attributed to men for a long time.</p>
             </div>
         </section>
         <section class="info-box">
-            <h3 class="info-box__title">De plus, </h3>
+            <h3 class="info-box__title">Furthermore, </h3>
             <div class="info-box__content">
-                <p>Le livre ne parle pas seulement d’Ada Lovelace. Il raconte aussi l’histoire d’une quarantaine de
-                    femmes scientifiques qui ont marqué leur époque, malgré le fait que leurs contributions aient
-                    souvent été minimisées ou oubliées au profit des hommes.</p>
+                <p>The book does not only talk about Ada Lovelace. It also tells the story of about forty women
+                    scientists who made their mark in their time, despite the fact that their contributions were often
+                    minimized or forgotten in favor of men.</p>
             </div>
         </section>
     </main>
@@ -126,23 +124,23 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                    <p>“project carried out in 2025 as part of a pedagogical exercise at the MMi department of
                         Montbéliard“</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
+                <img src="../assets/img/MMI_logo.svg" alt="MMi Logo">
             </a>
         </div>
     </footer>
